--- a/frontend/src/app/pages/edit-user/edit-user.page.html
+++ b/frontend/src/app/pages/edit-user/edit-user.page.html
@@ -1,1 +1,13 @@
-<app-user-form></app-user-form>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Editar Usuario</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content class="ion-padding">
+  <app-user-form
+    (userUpdated)="onUserUpdated($event)"
+    (canceled)="onCanceled()">
+  </app-user-form>
+</ion-content>
+  <app-layout></app-layout>
