NavBar en todas las páginas y nombre del usuario en la navbar

--- a/frontend/src/app/pages/all-properties/all-properties.page.html
+++ b/frontend/src/app/pages/all-properties/all-properties.page.html
@@ -1,4 +1,5 @@
 <p>all-properties works!</p>
+<div class="p-5"></div>
 <app-layout>
     <button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded" (click)="goToFavorites()">
         Favoritos
