--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -1,3 +1,4 @@
+<div class="p-5"></div>
 <p>home works!</p>
 <button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded" (click)="Login()">
     Login
@@ -5,3 +6,8 @@
 <button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded" (click)="Register()">
     Register
 </button>
+<button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded" (click)="View()">
+    Ver propiedades
+</button>
+
+<app-layout></app-layout>
