--- a/frontend/src/app/pages/property-view/property-view.page.html
+++ b/frontend/src/app/pages/property-view/property-view.page.html
@@ -1,5 +1,5 @@
-<p>property-view works!</p>
-
+<div class="p-5"></div>
+<h1> Property view works! </h1>
 <app-layout>
     <button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded" (click)="goToAllProperties()">
         Volver
