--- a/frontend/src/app/pages/admin-panel/admin-panel.page.html
+++ b/frontend/src/app/pages/admin-panel/admin-panel.page.html
@@ -1,3 +1,4 @@
+<div class="p-5"></div>
 <p>admin-panel works!</p>
 <button
   class="m-3 mt-4 px-4 py-2 bg-purple-500 text-white rounded"
@@ -12,3 +13,4 @@
   Lista de propiedades
 </button>
 
+<app-layout></app-layout>
