--- a/frontend/src/app/pages/favorites/favorites.page.html
+++ b/frontend/src/app/pages/favorites/favorites.page.html
@@ -1,3 +1,4 @@
+<div class="p-5"></div>
 <app-layout>
     <p>favorites works!</p>
     <button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded" (click)="goToTask()">
