--- a/frontend/src/app/components/property-card/property-card.component.html
+++ b/frontend/src/app/components/property-card/property-card.component.html
@@ -1,17 +1,32 @@
-<ion-card class="max-w-sm m-4 bg-white shadow-lg">
+<ion-card
+  class="bg-white shadow-lg rounded-lg overflow-hidden flex flex-col max-h-96"
+>
+  <img
+    [src]="property.img_url"
+    alt="{{ property.title }}"
+    class="w-full h-32 object-cover"
+  />
+
   <ion-card-header>
-    <ion-card-title class="text-xl font-bold text-gray-800">{{ property.title }}</ion-card-title>
+    <ion-card-title class="text-xl font-bold text-gray-800">{{
+      property.title
+    }}</ion-card-title>
   </ion-card-header>
-  <ion-card-content>
-    <p class="text-gray-600">{{ property.description }}</p>
-    <p class="font-semibold text-lg mt-2">Precio: ${{ property.price }}</p>
-    <p class="text-gray-600">Ubicación: {{ property.location }}</p>
+
+  <ion-card-content class="flex-1 p-4 overflow-hidden h-32">
+    <p class="text-gray-600 line-clamp-3">{{ property.description }}</p>
+    <div class="mt-2">
+      <p class="font-semibold text-lg">Precio: ${{ property.price }}</p>
+      <p class="text-gray-600">Ubicación: {{ property.location }}</p>
+    </div>
   </ion-card-content>
-  <!-- Colocar el botón aquí, al final del card -->
+
   <div class="p-4">
-    <button class="w-full bg-customGreen text-white rounded px-4 py-2" (click)="goToTask()">
+    <button
+      class="w-full bg-customGreen text-white rounded px-4 py-2"
+      (click)="goToTask()"
+    >
       Detalles de la propiedad
     </button>
   </div>
 </ion-card>
-  
