--- a/frontend/src/app/pages/all-properties/all-properties.page.html
+++ b/frontend/src/app/pages/all-properties/all-properties.page.html
@@ -1,18 +1,24 @@
 <app-layout class="flex flex-col min-h-screen">
-  <div class="mt-4 flex-grow overflow-y-auto">
-    <ion-grid class="px-2">
-      <ion-row>
-        <ion-col
-          size="12"
-          size-md="6"
-          size-lg="4"
-          *ngFor="let property of properties"
-        >
-          <div class="p-2">
-            <app-property-card [property]="property"></app-property-card>
-          </div>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+  <div class="flex h-screen">
+    <!-- Sidebar -->
+    <aside class="w-full lg:w-64">
+      <app-filters (filtrosAplicados)="aplicarFiltros($event)"></app-filters>
+    </aside>
+    <div class="mt-4 flex-grow overflow-y-auto">
+      <ion-grid class="px-2">
+        <ion-row>
+          <ion-col
+            size="12"
+            size-md="6"
+            size-lg="4"
+            *ngFor="let property of properties"
+          >
+            <div class="p-2">
+              <app-property-card [property]="property"></app-property-card>
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
   </div>
 </app-layout>
