Fixes de algunos temas esteticos de las propiedades

--- a/frontend/src/app/components/property-card/property-card.component.html
+++ b/frontend/src/app/components/property-card/property-card.component.html
@@ -1,5 +1,5 @@
 <ion-card
-  class="bg-white shadow-lg rounded-lg overflow-hidden flex flex-col max-h-96"
+  class="bg-white shadow-lg rounded-lg overflow-hidden flex flex-col h-full"
 >
   <img
     [src]="property.img_url"
