Funciona lo de agregar a la lista de comparacion, esta bien feo, eso lo hago mañana

--- a/frontend/src/app/pages/property-compare/property-compare.page.html
+++ b/frontend/src/app/pages/property-compare/property-compare.page.html
@@ -4,4 +4,7 @@
     <button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded" (click)="goToAllProperties()">
         Volver
     </button>
+    <div *ngFor="let property of compareList()">
+        <app-property-card [property]="property.property"></app-property-card>
+    </div>
 </app-layout>
