--- a/frontend/src/app/components/property-card/property-card.component.html
+++ b/frontend/src/app/components/property-card/property-card.component.html
@@ -1,19 +1,26 @@
 <ion-card
   class="bg-white shadow-lg rounded-lg overflow-hidden flex flex-col h-full"
 >
+<div class="relative w-full group">
   <img
     [src]="property.img_url"
     alt="{{ property.title }}"
     class="w-full h-32 object-cover"
   />
-
+  <button 
+    class="absolute top-4 right-4 bg-purple-400 text-white rounded px-4 py-2 opacity-0 group-hover:opacity-100 transition-opacity"
+    (click)="addToCompareList(property)"
+  >
+    Comparar
+  </button>
+</div>
   <ion-card-header>
     <ion-card-title class="text-xl font-bold text-gray-800">{{
       property.title
     }}</ion-card-title>
   </ion-card-header>
 
-  <ion-card-content class="flex-1 p-4 overflow-hidden h-32 ">
+  <ion-card-content class="flex-1 p-4 overflow-hidden h-32">
     <p class="text-gray-600 line-clamp-3">{{ property.description }}</p>
     <div class="mt-2">
       <p class="font-semibold text-lg">Precio: ${{ property.price }}</p>
