--- a/frontend/src/app/pages/property-compare/property-compare.page.html
+++ b/frontend/src/app/pages/property-compare/property-compare.page.html
@@ -1,10 +1,19 @@
-<div class="p-5"></div>
-<p>property-compare works!</p>
 <app-layout>
-    <button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded" (click)="goToAllProperties()">
-        Volver
-    </button>
-    <div *ngFor="let property of compareList()">
-        <app-property-card [property]="property.property"></app-property-card>
+  <button
+    class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded"
+    (click)="goToAllProperties()"
+  >
+    Volver
+  </button>
+  <!-- Condición para mostrar la tabla solo si hay propiedades en la lista de comparación -->
+  <div *ngIf="compareList().length > 0; else noCompareMessage">
+
+  </div>
+
+  <!-- Mensaje cuando no hay propiedades seleccionadas -->
+  <ng-template #noCompareMessage>
+    <div class="text-center text-lg text-gray-600">
+      No hay propiedades seleccionadas para comparar.
     </div>
+  </ng-template>
 </app-layout>
