--- a/frontend/src/app/components/compare-table/compare-table.component.html
+++ b/frontend/src/app/components/compare-table/compare-table.component.html
@@ -9,7 +9,7 @@
   </ion-row>
 
   <!-- Fila de datos de las propiedades -->
-  <ion-row *ngFor="let compareItem of compareList()" class="border-b">
+  <ion-row *ngFor="let compareItem of itemList" class="border-b">
     <ion-col size="3" class="px-4 py-2 text-sm"
       >{{ compareItem.property.title }}</ion-col
     >
