--- a/frontend/src/app/pages/favorites/favorites.page.html
+++ b/frontend/src/app/pages/favorites/favorites.page.html
@@ -10,7 +10,7 @@
     <div *ngIf="favoriteList().length > 0; else noFavorites" 
       class="overflow-auto max-w-full max-h-[calc(100vh-8rem)] w-full pb-6">
       <ion-grid class="w-full p-5">
-        <ion-row class="flex flex-wrap gap-4 justify-center">
+        <ion-row class="flex flex-wrap gap-4 justify-start">
           <ion-col
             *ngFor="let favorite of favoriteList()"
             class=" flex-grow-0 flex-shrink-0 w-full sm:max-w-[500px] md:max-w-[300px] min-w-[300px] max-h-[400px] min-h-[300px]">
