--- a/frontend/src/app/layout/layout.component.html
+++ b/frontend/src/app/layout/layout.component.html
@@ -11,6 +11,6 @@
 
   <!-- Pie de página general -->
   <footer class="bg-gray-800 text-white text-center p-4 mt-auto">
-    © 2024 Nuestra Aplicación Inmobiliaria
+    © 2024 RentMatch
   </footer>
 </div>
