--- a/frontend/src/app/components/property-card/property-card.component.html
+++ b/frontend/src/app/components/property-card/property-card.component.html
@@ -7,20 +7,20 @@
     alt="{{ property.title }}"
     class="w-full h-32 object-cover"
   />
-  <button 
-    class="absolute top-4 right-4 bg-purple-400 text-white rounded px-4 py-2 opacity-0 group-hover:opacity-100 transition-opacity"
-    (click)="addToCompareList(property)"
-    
-  >
-    Comparar
-  </button>
-  <!-- Botón de icono para Detalles -->
-  <button 
-    class="absolute top-16 right-4 bg-customGreen text-white rounded-full p-2 opacity-0 group-hover:opacity-100 transition-opacity"
-    (click)="toggleFavorite()"
-  >
-    <ion-icon [name]="isFavorite() ? 'star' : 'star-outline'"></ion-icon>
-  </button>
+    <div class="absolute top-4 left-0 right-0 flex justify-between px-4">
+      <button 
+        class="bg-black bg-opacity-50 text-amber-400 rounded-full p-2 opacity-0 group-hover:opacity-100 transition-opacity"
+        (click)="addToCompareList(property)"
+      >
+        Comparar
+      </button>
+      <button 
+        class="bg-black bg-opacity-50 text-amber-400 rounded-full p-2 opacity-0 group-hover:opacity-100 transition-opacity"
+        (click)="toggleFavorite()"
+      >
+        <ion-icon [name]="isFavorite() ? 'star' : 'star-outline'" class="text-2xl"></ion-icon>
+      </button>
+    </div>
 </div>
   <ion-card-header>
     <ion-card-title class="text-xl font-bold text-gray-800">{{
